tests/should_fail/syntax_store_expr_var_exists.nv
module main

// SHOULD FAIL: ~> (store expression) where bound variable already exists
let x = 10
let result = 5 ~> x {
    x + 1
}
println(result)
